--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -137,8 +137,10 @@
 <!ENTITY Ctr_cpanelmenus	"Panelmenuer: kompakt visning (bogmærker, historik, osv.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-knapper på værktøjslinje: skjul zoom-nulstil-knapper">
 <!ENTITY Ctr_alt_newtabp	"Nyt faneblad-side: alternativt udseende">
+<!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"Tilføjelsens 'mere info'-side: alternativt udseende">
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
+<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Tilføjelseshåndteringens liste med tilføjelser: vis tilføjelsesversion">
 <!ENTITY Ctr_bmbutpanelm	"Bogmærke-menuknap: panelmenu udseende">
 <!ENTITY Ctr_bmbutnotext	"Bogmærke-menuknap: skjul etiket på bogmærkelinje">
@@ -235,6 +237,7 @@
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
 <!ENTITY Ctr_hidenavbar		"Navigationslinjen: skjul værktøjslinje">
 <!ENTITY Ctr_nobookbarbg	"Bogmærkelinje: fjern baggrundsfarve">
+<!ENTITY Ctr_bookbarfs		"Bogmærkelinje: i fuldskærmstilstand">
 <!ENTITY Ctr_nonavbarbg		"Navigationslinje: fjern baggrundsfarve">
 <!ENTITY Ctr_nonavbarbg1	"Denne tilføjelses yderligere værktøjslinjer og andre værktøjslinjer i toppen påvirkes.">
 <!ENTITY Ctr_nonavbarbg2	"Alle værktøjslinjer i tilføjelsen 'The Fox, Only Better' Slim Chrome påvirkes.">
