--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -137,8 +137,10 @@
 <!ENTITY Ctr_cpanelmenus	"Menús de panel: Vista compacta (marcadores, historial, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña: Apariencia alternativa">
+<!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información' de los complementos: Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
+<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Página de complementos: Mostrar la versión del complemento">
 <!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores: Aspecto del panel de menú">
 <!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores: Ocultar etiqueta en la barra de marcadores">
@@ -235,6 +237,7 @@
 <!ENTITY Ctr_aerocolors		"Colores azul aero (celeste) para las barras de herramientas principales y pestañas">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
 <!ENTITY Ctr_nobookbarbg	"Barra de marcadores: Eliminar color de fondo">
+<!ENTITY Ctr_bookbarfs		"Barra de marcadores: En modo pantalla completa">
 <!ENTITY Ctr_nonavbarbg		"Barra de navegación: Eliminar color de fondo">
 <!ENTITY Ctr_nonavbarbg1	"Afecta a las barras de herramientas adicionales de este complemento y otras barras de herramientas de la parte superior.">
 <!ENTITY Ctr_nonavbarbg2	"Afecta a todas las barras de herramientas en el 'Chrome fino' del complemento 'The Fox, Only Better'.">
