--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -137,8 +137,10 @@
 <!ENTITY Ctr_cpanelmenus	"Compacter les panneaux (marque-pages, historique, etc)">
 <!ENTITY Ctr_hidezoomres	"Boutons de zoom (si sur une barre d'outils) : Masquer le bouton 'Réinitialiser le niveau de zoom'">
 <!ENTITY Ctr_alt_newtabp	"Page 'Nouvel onglet' : apparence alternative">
+<!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"Page 'Plus d'infos' des modules : apparence alternative">
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
+<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
 <!ENTITY Ctr_bmbutpanelm	"Bouton Marque-pages : apparence Panneau menu">
 <!ENTITY Ctr_bmbutnotext	"Bouton Marque-pages : cacher 'Marque-pages' sur la barre personnelle">
@@ -235,6 +237,7 @@
 <!ENTITY Ctr_aerocolors		"Couleur Bleue Aero pour les barres d'outils principales et les onglets">
 <!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
 <!ENTITY Ctr_nobookbarbg	"Barre personnelle : enlever l'arrière-plan">
+<!ENTITY Ctr_bookbarfs		"Barre personnelle : en mode plein écran">
 <!ENTITY Ctr_nonavbarbg		"Barre de navigation : enlever l'arrière-plan">
 <!ENTITY Ctr_nonavbarbg1	"Les barres d'outils additionnelles et autres barres supérieures créées par les modules sont affectées.">
 <!ENTITY Ctr_nonavbarbg2	"Toutes les barres d'outils en mode Slim Chrome du module 'The Fox, Only Better' sont affectées.">
