--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -36,7 +36,7 @@
 <!ENTITY Ctr_tabs2			"Zakulacené panely (alternativní)">
 <!ENTITY Ctr_tabs3			"Zakulacené panely (alternativní Aero)">
 <!ENTITY Ctr_tabforminfo	"Vzhled panelů je určen současným motivem vzhledu.">
-<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
+<!ENTITY Ctr_coltabsinfo	"Vzhled panelu není plně kompatibilní s rozšířením 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Panely navrchu (výchozí)">
 <!ENTITY Ctr_tabsontop1		"Panely navrchu --- nastaveno [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Panely pod adresním řádkem (v1) --- nastaveno [tabsontop=false]">
@@ -53,7 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Šířka panelů (min-width a max-width) je určena doplňkem TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Šířka panelů (min-width a max-width) je určena doplňkem TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Hodnoty pod 48px působí většinou chyby!">
-<!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_square_edges	"Hranaté horní rohy">
 <!ENTITY Ctr_tabinsertion	"Vložit související panel za aktuální (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Obnovit prázdnou faviconu (pokud stránka nemá vlastní)">
 <!ENTITY Ctr_noemptypticon	"Odebrat prázdnou faviconu z připnutého panelu">
@@ -65,7 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Na začátku lišty s panely">
 <!ENTITY Ctr_closetab_5		"Na všech panelech (vynutit)">
 <!ENTITY Ctr_closetab_hfot	"Skrýt pro jeden viditelný panel">
-<!ENTITY Ctr_closei_def		"Default icons">
+<!ENTITY Ctr_closei_def		"Defaulní icony">
 <!ENTITY Ctr_closeonleft	"Alternativní pozice na panelu">
 <!ENTITY Ctr_close_wwltab	"Zavřít okno s posledním viditelným panelem (about:config)">
 
@@ -137,10 +137,10 @@
 <!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie atd.)">
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"Nový panel: alternativní vzhled">
-<!ENTITY Ctr_addonmanager	"Add-on manager">
-<!ENTITY Ctr_alt_addonsp	"Stránka rozšířeníenu lišty 'další info': alternativní vzhled">
-<!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
-<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
+<!ENTITY Ctr_addonmanager	"Správce rozšíření">
+<!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
+<!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
+<!ENTITY Ctr_am_nowarning	"Seznam Správce rozšíření: skrývat varování">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
 <!ENTITY Ctr_bmbutnotext	"Tlačítko menu záložek: skrýt návěští na liště záložek">
@@ -221,14 +221,14 @@
 <!ENTITY Ctr_toolbars		"Nastavení lišt">
 <!ENTITY Ctr_dblclnewtab	"Dvojklik otevře nový panel (s adresou dle předvolby browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Skrývat lištu s pouze jedním panelem">
-<!ENTITY Ctr_hidetbwote		"Sníží prodlevu skrytí při spouštění">
+<!ENTITY Ctr_hidetbwote		"Snížení prodlevy skrytí při spouštění">
 <!ENTITY Ctr_hidetbwote_i	"Může způsobit chyby na liště panelů">
-<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
+<!ENTITY Ctr_hidetbwote2	"Zachovat lištu záhlaví (panely nahoře)">
 <!ENTITY Ctr_notabfog		"Odstranit zamlžené pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Odstranit barvu pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zmenšit prostor nad lištou nástrojů (pokud lze)">
 <!ENTITY Ctr_alttabstb		"Alternativní barva pozadí">
-<!ENTITY Ctr_alttabstb2		"V mazimalizovaném okně (tabs on top)">
+<!ENTITY Ctr_alttabstb2		"V maximalizovaném okně (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Přidat barvu pozadí (lišta záhlaví OS)">
 <!ENTITY Ctr_altmenubarpos	"Alternativní umístění (pod lištou záhlaví &brandShortName;)">
@@ -258,8 +258,8 @@
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
 <!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu (předvolba about:config)">
 <!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování' (předvolba about:config)">
-<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
-<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
+<!ENTITY Ctr_fsanimation	"Animace ve fullscreenu (about:config)">
+<!ENTITY Ctr_fsaduration	"Animace ve fullscreenu pro obsah HTML5 (about:config)">
 
 <!ENTITY Ctr_toolsitem		"Položka v nabídce Nástroje">
 <!ENTITY Ctr_appmenuitem	"Položka v nabídce tlačítka aplikace">
